--- a/website/static/css/custom.css
+++ b/website/static/css/custom.css
@@ -256,3 +256,7 @@ table tr {
 .homeContainer {
     background: transparent;
 }
+
+.fixedHeaderContainer {
+    box-shadow: 0 2px 2px rgba(0, 0, 0, .2);
+}
