--- a/website/static/css/custom.css
+++ b/website/static/css/custom.css
@@ -14,7 +14,7 @@ body,
 .mainContainer,
 .navGroup ul,
 footer.nav-footer {
-    background: url('/diary/img/bg.jpg') fixed;
+    background: url('/diary/img/bg.png') fixed;
 }
 
 footer .copyright {
