--- a/website/static/css/custom.css
+++ b/website/static/css/custom.css
@@ -150,8 +150,8 @@ video {
 blockquote {
     padding: 0 10px 0 10px;
     margin: 5px 0;
-    border: 1px solid rgba(33, 197, 85, .7);
-    border-left-width: 5px;
+    border-left: 6px solid rgba(33, 197, 85, .7);
+    /* border-left-width: 5px; */
 }
 
 .mainContainer .wrapper blockquote p {
