--- a/website/static/css/custom.css
+++ b/website/static/css/custom.css
@@ -1,6 +1,15 @@
 /* your custom css */
 
-@media only screen and (min-device-width: 360px) and (max-device-width: 736px) {}
+@media only screen and (min-device-width: 360px) and (max-device-width: 736px) {
+    .navigationSlider .slidingNav {
+        box-sizing: border-box;
+        position: fixed;
+        left: 0;
+        right: 0;
+        top: 0;
+        bottom: auto;
+    }
+}
 
 @media only screen and (min-width: 1024px) {}
 
@@ -24,7 +33,8 @@ body,
 .mainContainer,
 .navGroup ul,
 footer.nav-footer {
-    background: rgba(230, 233, 202, 1) url('/diary/img/bg.png') fixed;
+    background: #fefefe;
+    /* background: rgba(230, 233, 202, 1) url('/diary/img/bg.png') fixed; */
 }
 
 .mainContainer {
@@ -136,6 +146,11 @@ video {
     ;
     word-spacing: 2px;
     letter-spacing: 1px;
+    color: #393939;
+}
+
+h2{
+    border-bottom: 1px solid #ccc;
 }
 
 a {
@@ -164,7 +179,7 @@ a {
 
 .mainContainer .wrapper ol,
 .mainContainer .wrapper ul {
-    padding: 2px 0 0 24px
+    padding: 2px 0 0 40px
 }
 
 blockquote {
@@ -332,6 +347,10 @@ table tr {
     margin-top: 5px;
 }
 
+.container .wrapper h2 {
+    color: #393939;
+}
+
 .docsNavContainer {
     margin: 0;
 }
@@ -441,3 +460,7 @@ pre code {
 .cv-wrapper div {
     flex: 1;
 }
+
+/* pdf */
+
+/* @import url(./pdf.css); */
